--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.11.0",
+		"dayjs": "^1.10.4",
 		"next": "^10.0.0",
 		"next-offline": "^5.0.2",
 		"react": "^16.13.1",
