--- a/public/static/manifest.json
+++ b/public/static/manifest.json
@@ -8,6 +8,11 @@
 			"type": "image/png"
 		},
 		{
+			"src": "img/apple-touch-icon-150x150.png",
+			"sizes": "150x150",
+			"type": "image/png"
+		},
+		{
 			"src": "img/apple-touch-icon-152x152.png",
 			"sizes": "152x152",
 			"type": "image/png"
